@@ -1,3 +1,9 @@
+2009-06-16  Thomas Moulard  <thomas.moulard@gmail.com>
+
+	Do not use boost::make_shared.
+	* tests/hs071.hh,
+	* tests/optimization-problem-1.cc: Here.
+
 2009-06-15  Thomas Moulard  <thomas.moulard@gmail.com>
 
 	Regenerate output.
